# imdclient

./: .codecov.yml  .gitattributes  .gitignore  .pylintrc  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage1.xml  coverage2.xml  pyproject.toml  readthedocs.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  gh-ci.yaml  gromacs-integration.yaml  lammps-integration.yaml  namd-integration.yaml  namd-integration.yaml-DISABLED
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/hpc_testing/: test_manual.py
docs/hpc_testing/gromacs/: README.md  struct.gro
docs/hpc_testing/lammps/: README.md  lammps_v3_nst_1.in  topology_after_min.data
docs/hpc_testing/namd/: README.md
docs/source/: api.rst  conf.py  getting_started.rst  header_def.rst  index.rst  protocol_v2.rst  protocol_v3.rst  refs.bib  usage.rst
examples/gromacs/: README.md  imd.sh  mdout.mdp
examples/gromacs/repo_files/: client.py  run.sh
examples/gromacs/slurm/: README.md  client.py  imd.sh  md.cpt  md.edr  md.trr  md.xvg
examples/lammps/repo_files/: client.py
examples/namd/repo_files/: client-live-stream-2.ipynb  client-live-stream.ipynb  client-live-stream.py  client.py
imdclient/: IMD.py  IMDClient.py  IMDProtocol.py  IMDREADER.py  IMDServer.py  __init__.py  backends.py  minimalReader.py  results.py  streamanalysis.py  streambase.py  utils.py  vdos.py
imdclient/data/: gromacs_topol.tpr  gromacs_v3.mdp  lammps_v3.in  namd_traj.dcd
imdclient/data/gromacs/md/: gmx_serial_test.top  gmx_serial_test.tpr  gromacs_struct.gro  gromacs_v2_nst1.mdp  gromacs_v2_nst8.mdp  gromacs_v3.tpr  gromacs_v3_nst1.mdp  gromacs_v3_nst1.tpr  gromacs_v3_nst8.mdp  struct_imd.gro
imdclient/data/lammps/md/: lammps_topol.data  lammps_v2_nst_1.in  lammps_v2_nst_8.in  lammps_v3.in  lammps_v3_nst_1.in  lammps_v3_nst_8.in
imdclient/data/namd/md/: alanin.conf  alanin.dcd  namd_v2_nst_1.namd  namd_v2_nst_8.namd  namd_v3.namd  namd_v3_nst_1.namd  namd_v3_nst_8.namd  openmpi-sol.sh
imdclient/tests/: MinimalReader.py  base.py  conftest.py  datafiles.py  minimalReader.py  minimalreader.py  server.py  test_gromacs.py  test_imdclient.py  test_imdreader.py  test_lammps.py  test_manual.py  test_namd.py  test_namd_sol.py  test_stream_analysis.py  test_utils.py  test_vdos.py  tests-NAMD-sol.md  utils.py
imdclient/tests/docker_testing/: docker.md
imdclient/tests/hpc_testing/gromacs/: README.md  gmx_gpu_test.mdp  gromacs.md  validate_gmx.sh
imdclient/tests/hpc_testing/lammps/: README.md  dump_initial_config.dump  lammps.md  lammps_v3.in  lammps_v3_imd.in  lammps_v3_write_traj.in  topology_after_min.data  validate_lmp.sh
imdclient/tests/hpc_testing/lammps/gromacs/: struct_imd.gro
imdclient/tests/hpc_testing/namd/: README.md  namd.md  namd_v3_nst_1.namd  validate_namd.sh
